1.2.0p5:
    Checks & Agents:
    * FIX: windows agent: fixed possible crash in eventlog section

    BI:
    * FIX: fixed bug in aggregation count (thanks Neil) 

1.2.0p4:
    WATO:
    * FIX: fixed detection of existing groups when creating new groups
    * FIX: allow email addresses like test@test.test-test.com
    * FIX: Fixed Password saving problem in user settings

    Checks & Agents:
    * FIX: postgres_sessions: handle case of no active/no idle sessions
    * FIX: winperf_processor: handle parameters "None" (as WATO creates)
    * FIX: mssql_counters: remove debug output, fix bytes output
    * FIX: mssql_tablespaces: gracefully handle garbled agent output

    Multisite:
    * FIX: performeter_temparature now returns unicode string, because of °C
    * FIX: output_format json in webservices now using " as quotes

    Livestatus:
    * FIX: fix two problems when reloading module in Icinga (thanks to Ronny Biering)

1.2.0p3:
    Mulitisite:
    * Added "view" parameter to dashlet_pnpgraph webservice
    * FIX: BI: Assuming "OK" for hosts is now possible
    * FIX: Fixed error in makeuri() calls when no parameters in URL
    * FIX: Try out mode in view editor does not show context buttons anymore
    * FIX: WATO Folder filter not available when WATO disabled
    * FIX: WATO Folder Filter no longer available in single host views
    * FIX: Quicksearch converts search text to regex when accessing livestatus
    * FIX: Localize option for not OMD Environments
    * FIX: Fixed "access denied" problem with multisite authorization in PNP/NagVis
           in new OMD sites which use the multisite authorization

    WATO:
    * FIX: Users & Contacts uses case-insensitive sorting of 'Full name' column  
    * FIX: Removed focus of "Full name" attribute on editing a contact
    * FIX: fix layout bug in ValueSpec ListOfStrings (e.g. used in
           list of explicit host/services in rules)
    * FIX: fix inheritation of contactgroups from folder to hosts